envoy-static/envoy.yaml
#admin:
#  access_log_path: "/access.log"
#  address:
#    socket_address:
#      address: 0.0.0.0
#      port_value: 9902
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  headers:
                    - name: "X-node"
                      exact_match: "1"
                  prefix: "/"
                route:
                  cluster: helloworld-1
              - match:
                  headers:
                    - name: "X-node"
                      exact_match: "2"
                  prefix: "/"
                route:
                  cluster: helloworld-2
              - match:
                  prefix: "/"
                route:
                  cluster: helloworld

  clusters:
  - name: helloworld
    connect_timeout: 2s
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: helloworld
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helloworld
                port_value: 5000
  - name: helloworld-1
    connect_timeout: 2s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: helloworld-1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helloworld-set-1.helloworld.default.svc.cluster.local
                port_value: 5000
  - name: helloworld-2
    connect_timeout: 2s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: helloworld-2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helloworld-set-2.helloworld.default.svc.cluster.local
                port_value: 5000
